# aqua2-spiral-coverage

./: README.md
aqua2_interfaces/: CMakeLists.txt  package.xml
aqua2_interfaces/msg/: AutopilotCommand.msg  AutopilotOutput.msg  AutopilotPIDComponents.msg  AutopilotTargets.msg  BBox.msg  Command.msg  Health.msg  LegState.msg  PeriodicLegCommand.msg  RobodevelState.msg  StatusIndicator.msg  TagFeedback.msg  Waypoint.msg
aqua2_interfaces/srv/: GetAutopilotState.srv  GetBool.srv  GetNamedBool.srv  GetNamedFloat.srv  GetNamedInt.srv  GetString.srv  MissionUpdate.srv  SetAutopilotMode.srv  SetBool.srv  SetFloat.srv  SetInt.srv  SetLegParams.srv  SetNamedFloat.srv  SetString.srv
aqua2_simulation_interfaces/: CMakeLists.txt  README.md  package.xml
aqua2_simulation_interfaces/srv/: EmptyWorkaround.srv  GetFloat.srv  GetPosition.srv  SetCurrent.srv  SetLegStatus.srv  SetPosition.srv
movement/: package.xml  setup.py
movement/movement/: .stabilize.py.swp  cover_reef.py  detect_boundary.py  et_boundary.py  geometry.py  ml_boundary.py  save_image.py  sim_map.pickle  stabalize.py  stabilize.py  swim_square.py  swim_to.py  visualize.py
movement/movement/machine_learning/: cut.py  model_test.py  model_train.py  real_cnn.h5  reef_cnn.h5
movement_interfaces/: CMakeLists.txt  package.xml
